sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:13: error: not found: value nbchangt
    for (i <- nbchangt  to 0 by -1){
              ^AlgCocktailSort2:19: error: not found: value nbchangt
    nbchangt-=1
    ^